--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     #chat::before{
       content:"";position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);
       background:url('/avatars/logo-edison.png') no-repeat center center;
-      background-size:50% auto;opacity:.5;width:100%;height:100%;pointer-events:none
+      background-size:50% auto;opacity:.2;width:100%;height:100%;pointer-events:none
     }
     .row{display:flex;margin:8px 0;animation:fade .25s ease-out}
     @keyframes fade{from{opacity:.2;transform:translateY(4px)}to{opacity:1;transform:none}}
@@ -95,7 +95,41 @@ async function pollUntilDone(threadId, runId, thinkingBubble){
 }
 
 function fmtReply(text){
-  return text.split("\n").map(l=>"👉 "+l).join("\n");
+  return (text || "")
+    .split(/\r?\n/)
+    .map(s => s.trim())
+    .filter(s => s.length > 0)              // bỏ dòng trắng
+    .map(l => l.startsWith("👉") ? l : "👉 " + l)  // tránh trùng icon
+    .join("\n");
+}
+
+function cleanAssistant(text){
+  if (!text) return "";
+  let t = text;
+
+  // Cắt phần References/Resources ở cuối
+  const cutMarks = [
+    /^#+\s*references\b/i, /^#+\s*resources\b/i,
+    /^#+\s*(tài liệu|tham khảo)\b/i,
+    /^\s*(references|resources|tài liệu tham khảo|nguồn)\s*:\s*$/i
+  ];
+  const lines = t.split(/\r?\n/);
+  const idx = lines.findIndex(line => cutMarks.some(rx => rx.test(line.trim())));
+  if (idx !== -1) t = lines.slice(0, idx).join("\n");
+
+  // Loại các token kiểu [8:1source], [source], [8:2source]...
+  t = t.replace(/\[[^\]]*source[^\]]*\]/gi, "");
+
+  // Loại các dấu tham chiếu số đơn giản [1], [2]...
+  t = t.replace(/\[\s*\d+\s*\]/g, "");
+
+  // Gom nhiều dòng trắng thành 1
+  t = t.replace(/\n{2,}/g, "\n");
+
+  // Bỏ câu rào đón không cần thiết
+  t = t.replace(/\b(as an ai|i'm an ai|as a language model)[^.\n]*[.\n]/gi, "");
+
+  return t.trim();
 }
 
 async function send(){
@@ -136,7 +170,7 @@ async function send(){
 
     // Hiển thị kết quả
     thinking.classList.remove("muted");
-    thinking.textContent = fmtReply(reply);
+    thinking.textContent = fmtReply(cleanAssistant(reply);
 
     // Ghi log (best-effort, không chặn UI)
     try {
@@ -166,6 +200,18 @@ $reset.onclick=()=>{document.cookie="edison_email=; expires=Thu, 01 Jan 1970 00:
 
 // Câu chào tĩnh khi mở trang
 addBubble("bot", "Xin chào! Mình có thể giúp gì cho bạn hôm nay liên quan đến CPD không?");
+
+// Hỏi email ngay khi vào trang (nếu chưa có cookie)
+(function ensureEmailOnLoad(){
+  if (!getEmail()) {
+    const input = prompt("What is your email in Edison Schools?");
+    if (input && /@edisonschools\.edu\.vn$/i.test(input)) {
+      setEmail(input);
+    } else {
+      alert("Email must be @edisonschools.edu.vn");
+    }
+  }
+})();
 
 // Privacy line: hiện 1 lần
 if(!localStorage.getItem("privacyShown")){$privacy.style.display="block";localStorage.setItem("privacyShown","1");}
